--- a/index.css
+++ b/index.css
@@ -24,6 +24,8 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   margin: 1rem;
   padding: 1rem;
   max-width: 700px;
@@ -39,11 +41,27 @@ code {
 }
 
 h1 {
-  margin-top: 3rem;
+  margin-top: 3.5rem;
+}
+
+h1:before {
+  content: "# ";
 }
 
 h2 {
-  margin-top: 2rem;
+  margin-top: 3rem;
+}
+
+h2:before {
+  content: "## ";
+}
+
+h3 {
+  margin-top: 2.5rem;
+}
+
+h3:before {
+  content: "### ";
 }
 
 li {
@@ -52,6 +70,27 @@ li {
 
 p {
   line-height: 1.3rem;
+}
+
+p > span {
+  color: #ff0080;
+}
+
+pre {
+  padding: 1rem;
+  background-color: var(--color-bg-muted);
+}
+
+pre[id="img-example"] {
+  padding: 1rem;
+}
+
+pre > green {
+  color: #5bb700;
+}
+
+pre > red {
+  color: #d00068;
 }
 
 a {
@@ -70,4 +109,45 @@ a:hover {
 img {
   width: 100%;
   height: auto;
+}
+
+div {
+  display: flex;
+  justify-content: right;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  font-size: 2rem;
+  position: sticky;
+  bottom: 1rem;
+  right: 1rem;
+}
+
+div > a {
+  text-decoration: none;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
+div > a:hover {
+  background-color: var(--color-bg);
+}
+
+@media screen and (max-width: 400px) {
+  body {
+    margin: 0.6rem;
+    padding: 0.6rem;
+    max-width: 100vw;
+  }
+
+  button {
+    left: 0;
+  }
+
+  pre {
+    overflow: scroll;
+  }
 }
